<resources>
    <string name="app_name">ContactList</string>
    <string name="app_title">Company Number Organiser</string>
    <string name="contacts_based_on_positions">View Contacts Based on Position</string>
    <string name="addContacts">Add A New Contact</string>
    <string name="name">Name</string>
    <string name="designation">Designation</string>
    <string name="companyName">CompanyName</string>
</resources>