<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:cardElevation="10sp"
        android:layout_marginBottom="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/persons_company_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/companyName"
                android:textSize="20sp"
                android:textStyle="bold"/>

<!--            <TextView-->
<!--                android:id="@+id/persons_designation"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/designation"-->
<!--                android:textSize="20sp"-->
<!--                android:textStyle="bold" />-->

            <TextView
                android:id="@+id/contact_persons_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="25sp"
                android:textStyle="italic" />

           <GridLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
               <TextView
                   android:id="@+id/contact_number"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/addContacts"
                   android:textSize="20sp" />

               <com.google.android.material.floatingactionbutton.FloatingActionButton
                   android:id="@+id/deleteIcon"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_row="0"
                   android:layout_column="1"
                   android:layout_gravity="end"
                   android:clickable="true"
                   app:srcCompat="@android:drawable/ic_menu_delete" />

           </GridLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>