<?xml version="1.0" encoding="utf-8"?>
<!-- Root layout element for the activity, using ConstraintLayout -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Top LinearLayout to hold the title -->
    <LinearLayout
        android:id="@+id/title_space"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/falcon"
        app:layout_constraintTop_toTopOf="parent">

        <!-- TextView to display the title -->
        <TextView
            android:id="@+id/title_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/app_title"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginTop="16dp" />
    </LinearLayout>

    <!-- Main content area LinearLayout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/title_space"
        tools:layout_editor_absoluteX="-16dp">

        <!-- First CardView -->
        <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp">

            <!-- TextView inside the CardView -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/contacts_based_on_positions"
                android:textAlignment="center"
                android:textColor="@color/falcon"
                android:textStyle="bold" />
            <!-- Note: There's an extra closing ">" after "android:textStyle="bold"" above, which should be removed. -->

        </androidx.cardview.widget.CardView>

        <!-- Second CardView -->
        <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp">

            <!-- TextView inside the CardView -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/addContacts"
                android:textAlignment="center"
                android:textColor="@color/falcon"
                android:textStyle="bold" />
            <!-- Note: There's an extra closing ">" after "android:textStyle="bold"" above, which should be removed. -->

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
